# bookstore

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
django_project/accounts/: tests.py
django_project/accounts/migrations/: 0001_initial.py  0002_alter_customuser_email.py
django_project/books/: admin.py  models.py  tests.py  urls.py  utils.py  views.py
django_project/books/migrations/: 0001_initial.py  0002_book_slug.py  0003_alter_book_slug.py  0004_alter_book_slug.py  0005_review.py  0006_book_cover.py  0007_alter_book_options.py  0008_book_id_index.py
django_project/django_project/: settings.py  urls.py
django_project/pages/: tests.py
django_project/staticfiles/js/: base.js
django_project/templates/: _base.html  home.html
django_project/templates/account/: email_confirm.html
django_project/templates/account/email/: email_confirmation_subject.txt
django_project/templates/books/: book_detail.html  book_list.html  search_results.html
django_project/templates/registration/: login.html
