[tool.poetry]
name = "ch4-bookstore"
version = "0.1.0"
description = ""
authors = ["Orlovchik <svetl.orlovaa@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
djlint = "^1.34.1"
django-allauth = "^0.63.2"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
